[tool.poetry]
name = "chainlit-handson"
version = "0.1.0"
description = ""
authors = ["Nanthagopal-Eswaran <nanthagopal.eswaran@solitontech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
chainlit = "^1.0.502"
pyautogen = "^0.2.22"
langchain = "^0.1.14"
langchain-openai = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
